# AskDocsAnything

./: .gitignore  README.md  pyproject.toml
askdocsanything/: __init__.py  agent.py  cli.py  codex.py  codex_answer.schema.json  documents.py  finder_gui.py  models.py
scripts/: askdocsanything_finder.sh  install_macos_finder_quick_action.sh
tests/: test_agent.py
